2009-06-12  Kenichi Handa  <handa@m17n.org>

	* international/eucjp-ms.el: Re-generated.

2009-06-10  Glenn Morris  <rgm@gnu.org>

	* calendar/cal-dst.el (calendar-time-zone-daylight-rules):
	Fix typo in 2008-04-02 change.

2009-06-10  Kenichi Handa  <handa@m17n.org>

	* composite.el (compose-gstring-for-terminal): For zero-width
	characters of Unicode category `Cf', simply replace it with SPC.

2009-06-09  Agustín Martín <agustin.martin@hispalinux.es>

	* ispell.el: Make `ispell-dictionary' customizable (#2555)

2009-06-08  Michael Albinus  <michael.albinus@gmx.de>

	* ediff-util.el (ediff-compute-custom-diffs-maybe): Handle remote
	files correctly.

2009-06-08  Adrian Robert  <Adrian.B.Robert@gmail.com>

	* term/ns-win.el (composition-function-table)
	(script-representative-chars): Don't alter.

2009-06-07  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-do-copy-or-rename-file-directly): Make direct
	copy more robust, especially when "chown" is not applicable.

2009-06-07  Martin Rudalics  <rudalics@gmx.at>

	* emacs-lisp/lisp-mode.el (lisp-mode-variables): Fix doc-string.

2009-06-06  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-open-connection-setup-interactive-shell):
	Apply workaround for OpenSolaris bug.

2009-06-05  Daiki Ueno  <ueno@unixuser.org>

	* epa.el (epa-decrypt-region): Detect encoding if
	coding-system-for-read is not specified.
	<http://sourceforge.jp/ticket/browse.php?group_id=2267&tid=17018>
	(epa-verify-region): Ditto.

2009-06-04  Stefan Monnier  <monnier@iro.umontreal.ca>

	* tar-mode.el (tar-header-block-tokenize): Obey @LongLink even for
	POSIX tar archives (bug#3410).

2009-06-04  Johan Bockgård  <bojohan@gnu.org>

	* vc.el (vc-revision-other-window): Fix argument to backend
	function revision-completion-table; it expects a list.

2009-06-04  Stefan Monnier  <monnier@iro.umontreal.ca>

	* frame.el (delete-other-frames): Only delete frames on the
	same terminal (bug#3442).
